# AccountingFlow_Finance_Intelligence

./: .env.demo  .gitignore  App_orig.tsx  App_orig_utf8.tsx  DAILY_WORK_LOG.md  DemoCo_Sample_2026.xlsx  LESSONS_LEARNED.md  PERFORMANCE_UPGRADE_REPORT.md  PHASE_3_ROADMAP.md  README.md  SCENARIO_ANALYSIS_2026_2028.md  SIMULATION_INSIGHTS_R28.md  STRATEGY_MANIFESTO_FINAL.md  SYSTEM_UPGRADE_KNOWLEDGE.md  Slim_Controller_Update.md  WORK_LOG_Handoover.md  ai_orig.rs  app_history.txt  audit_output.txt  audit_output_v2.txt  build_err.txt  build_error.txt  build_errors.txt  build_errors_master.txt  build_errors_utf8.txt  build_output.txt  build_output_utf8.txt  cargo_check.json  check_divs.cjs  daily_worklog.md  dailyworklog.md  dev_log.txt  dev_log_force.txt  dev_output.txt  engine_determinism_test.ts  engine_replay_test_v3.ts  engine_stress_test.ts  error_detail.txt  error_log.txt  errors.txt  (+54 more)
src-tauri/: .taurignore  Cargo.toml  build_bin_output.txt  build_err.txt  build_error.txt  build_error_v2.txt  build_error_v3.txt  build_errors.txt  build_errors_3.txt  build_out.txt  build_output.json  build_results.txt  cargo_build_log.txt  cargo_build_log_v2.txt  cargo_check_err.txt  cargo_check_err_utf8.txt  cargo_errors_utf8.txt  cargo_final_build.txt  cargo_output.txt  check_error.txt  check_error_v2.txt  check_full.txt  check_log.txt  check_output.txt  check_output_utf8.txt  check_result.json  check_results.txt  compilation_errors.txt  compile_log.txt  compiler_errors.txt  csv_check.txt  err.txt  err_log.txt  error.json  error.txt  error_ascii.txt  error_detail.txt  error_final.txt  (+24 more)
(+389 files in other folders)
