[package]
name = "accounting-flow"
version = "0.1.0"
description = "Local-First SaaS Accounting Application"
authors = ["AccountingFlow Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] } # AI 통신용
tokio = { version = "1", features = ["full"] }      # 비동기 처리
chrono = { version = "0.4", features = ["serde"] }  # 날짜 처리
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
csv = "1.3"
rayon = "1.10"
encoding_rs = "0.8"
chardetng = "0.1"
base64 = "0.22"
regex = "1"
lazy_static = "1.4"
calamine = "0.24"
once_cell = "1.18"
zip = "0.6"
aes-gcm = "0.10.3"
async-trait = "0.1.89"


[lib]
name = "accounting_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
